--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,13 +3,20 @@
 
 <head>
     <meta charset='UTF-8'>
-    <link rel='stylesheet' href='/assets/css/burger_style.css' type='text/css' />
+    <link rel='stylesheet' type='text/css' href='assets/css/burger_style.css' />
+    <link rel='icon' type='image/png' href='assets/img/black_bean_burger.ico' />
+    <link href='https://fonts.googleapis.com/css?family=Kranky' rel='stylesheet'>
     <title>Eat Da Burger!</title>
     <script src='https://code.jquery.com/jquery.js'></script>
 </head>
 
 <body>
     {{{ body }}}
+    <footer class='footer'>
+        <p>"Eat Da Burger" is an exercise in Node, Express, Handlebars, and SQL. &copy;
+            2019 <a href='https://desmondmullen.com' target='_blank'>desmondmullen.com</a> | <a
+                href='https://github.com/desmondmullen/FriendFinder' target='_blank'>GitHub Repository</a></p>
+    </footer>
 </body>
 
 </html>
