--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,5 @@
-<div><img class='icon' src='assets/img/black-bean-burger.png' width=220>
+<div>
+    <img class='icon' src='assets/img/black-bean-burger.png' width=220>
     <h1 class='heading'>Eat Da Burger!</h1>
 </div>
 <div class='left-side'>
