--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -23,7 +23,7 @@ input {
 }
 
 li {
-    font-size: x-large;
+    font-size: 1.5em;
 }
 
 .heading {
@@ -44,50 +44,38 @@ li {
     left: 8%;
 }
 
-.left-side, .right-side {
-    box-sizing: border-box;
-    float: left;
-    width: 45%;
+.col-container {
+    display: table;
+    margin: 0 auto;
+    width: 93%;
+}
+
+.left-side, .right-side, .middle {
+    display: table-cell;
 }
 
 .left-side {
-    margin: 0 1.5% 0 3.5%;
     background-color: #0DD1FF;
 }
 
 .right-side {
-    margin: 0 3.5% 0 1.5%;
     background-color: #E8950C;
 }
 
-.right-side::after {
-    /* this, inexplicably, does not work */
-    clear: both;
-    content: '';
-    display: block;
-}
-
-.clear-float {
-    clear: both;
-    display: block;
-    margin: 1% 3.5%;
+.middle {
+    width: 3%;
 }
 
 .add-a-burger {
     text-align: center;
     font-size: 2em;
     background-color: lightgray;
-    margin: 0 3.5% 2% 3.5%;
+    margin: 3% 3.5% 2% 3.5%;
     padding: 1%;
 }
 
 .add-a-burger-heading {
     margin: 0 0;
-}
-
-.float-left {
-    float: left;
-    margin-left: 5%;
 }
 
 .footer {
