--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,7 @@
-<div>
-    <img class='icon' src='assets/img/black-bean-burger.png' width=220>
-    <h1 class='heading'>Eat Da Burger!</h1>
+<div><a href='/' class='heading-text'>
+        <img class='icon' src='assets/img/black-bean-burger.png' width=220>
+        <h1 class='heading heading-text'>Eat Da Burger!</h1>
+    </a>
 </div>
 <div class='col-container'>
     <div class='left-side'>
@@ -10,12 +11,18 @@
         <ul>
             {{#each burgers}}
             {{#unless devoured}}
-            <li>
+            <li class='created-li'>
                 <form method='POST' action='/{{this.id}}?_method=PUT'>
-                    {{burger_name}} &nbsp;<button type='submit'>Devour this burger!</button>
+                    {{burger_name}} &nbsp;<button id='brg-{{this.id}}' class='brg' type='submit'>Devour this
+                        burger!</button>
                 </form>
             </li>
             {{/unless}}
+            {{#if last_one_devoured}}
+            <li class='created-li'>
+                <section class='last-one-devoured'>{{burger_name}}</section>
+            </li>
+            {{/if}}
             {{/each}}
         </ul>
     </div>
@@ -26,10 +33,16 @@
         </section>
         <ul>
             {{#each burgers}}
+            {{#if last_one_devoured}}
+            <li class='devoured-li'>
+                <section class='last-one-added'>{{burger_name}}</section>
+            </li>
+            {{else}}
             {{#if devoured}}
-            <li>
+            <li class='devoured-li'>
                 {{burger_name}}
             </li>
+            {{/if}}
             {{/if}}
             {{/each}}
         </ul>
@@ -42,3 +55,10 @@
             value='Submit'>
     </form>
 </div>
+<script>
+    $('.last-one-devoured').animate({ opacity: '0', 'margin-left': '+=20%' }, 1000);
+    $('.last-one-added').attr({ 'style': 'opacity: 0' });
+    setTimeout(function () {
+        $('.last-one-added').animate({ opacity: '1', 'margin-left': '+=20%' }, 1000);
+    }, 600);
+</script>
